--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^0.10.10
+  video_player: ^2.0.0-nullsafety.7
   video_player_web_hls:
     path: ../
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
