--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ flutter:
   plugin:
     platforms:
       web:
-        pluginClass: VideoPlayerPluginHls 
+        pluginClass: VideoPlayerPluginHls
         fileName: video_player_web_hls.dart
 
 dependencies:
@@ -18,14 +18,14 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  meta: ^1.2.3
-  video_player_platform_interface: ^2.2.0
-  js: ^0.6.2
+  meta: ^1.3.0
+  video_player_platform_interface: ^3.0.0-nullsafety.3
+  js: ^0.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.9.2
+  pedantic: ^1.10.0
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.12.8 <2.0.0"
